# ProconFromOther

./: CMakeLists.txt  input.json  play.py
Solver/: CMakeLists.txt
Solver/gutiku2-11-nobeam-fast-product/: main.cpp  solver.cpp  solver.hpp
Solver/gutiku2-8-nobeam-product/: main.cpp  solver.cpp  solver.hpp
Solver/include/header/: debug_print.hpp  json_dump.hpp  kyougi_app.h
Solver/include/source/: kyougi_app.cpp
gutiku2-11-nobeam-fast-product/: main.cpp  solver.cpp  solver.hpp
gutiku2-8-nobeam-product/: main.cpp  solver.cpp  solver.hpp
include/header/: debug_print.hpp  json_dump.hpp  kyougi_app.h
include/header/nlohmann/: json.hpp
include/source/: kyougi_app.cpp
submit/: consolation-match.json  final.json  semi-final.json
